<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/icon_bg"  >
    <LinearLayout 
    	android:layout_width="300dp"
    	android:layout_height="match_parent"
    	android:orientation="vertical">
            <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/setnick"
        android:textColor="#1b1b1b"
        android:textSize="30sp" />

    <EditText
        android:padding="5dp"
        android:id="@+id/nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/inputnick"
        android:background="@drawable/input" />
    <Button
        android:id="@+id/btnok"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/square_btn_selector"
        android:text="@string/btnok"
        android:textColor="#ff353e45"
        android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>
