<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<RelativeLayout 
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/status_bg">
        

	    <Button
	        android:id="@+id/back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:background="@drawable/btn_back_common" />
        <TextView 
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="新建频道"
            android:textColor="#fff"
            android:textSize="20sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
	        android:padding="5dp"
	        android:id="@+id/username"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:textSize="20sp"
	        android:hint="@string/groupname"
	        android:background="@drawable/input" />
	
	    <EditText
	        android:padding="5dp"
	        android:id="@+id/comment"
	        android:layout_width="match_parent"
	        android:layout_height="100dp"
	        android:layout_marginTop="20dp"
	        android:textSize="20sp"
	        android:hint="@string/groupcomment"
	        android:background="@drawable/input" />
	    
	    <Button 
	        android:id="@+id/register"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:textSize="25sp"
	        android:text="@string/btnok"
	        android:textColor="@color/black"
	        android:background="@drawable/btn_common"/>
    </LinearLayout>


</LinearLayout>
